Modified: Align counter div in profile window and create room div

--- a/css/Profile.css
+++ b/css/Profile.css
@@ -63,7 +63,7 @@
 
 #ProfileDiv #WhoDiv #CounterDiv {
 	margin-top : 3px;
-	margin-left : 180px;
+	text-align : right;
 }
 
 #ProfileDiv #WhoDiv #CounterDiv span {
