--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -4,7 +4,11 @@
 	height			: 52mm;
 	*/
 	margin-bottom		: 5px;
-	width			: 198px;
+	border			: 2px solid #216778;
+	border-top : 0px;
+	width			: 200px;
+	height : 100%;
+	margin-top : 4px;
 }
 
 #Main #Left #Contact #ContactTitle {
@@ -12,12 +16,22 @@
 	font-size		: 11px;
 	color			: #FFF;
 	/*padding		: 1mm 0mm 0mm 0mm;*/
-	padding			: 4px 0px 0px 0px;
-	display			: table;
+	display			: block;
 	list-style		: none;
 	position		: relative;
 	/*width			: 102%;*/
-	width			: 206px;
+	width			: 204px;
+	left : -2px;
+	overflow : hidden;
+}
+
+#Main #Left #Contact #ContactTitle:after {
+	content:".";
+	display:block;
+	clear:both;
+	visibility:hidden;
+	height:0;
+	overflow:hidden;
 }
 
 #Main #Left #Contact #ContactTitle li {
@@ -29,8 +43,9 @@
 	width			: 42%;
 	padding			: 2px 2px 2px 3mm;
 	*/
-	width			: 88px;
-	padding			: 2px 2px 2px 12px;
+	width			: 98px;
+	padding			: 3px 0px 2px 4px;
+	overflow : hidden;
 }
 
 
@@ -44,13 +59,13 @@
 	padding-top		: 1mm;
 	padding-left		: 2mm;
 	*/
-	padding-top		: 4px;
+	padding-top		: 5px;
 	padding-left		: 8px;
-	border			: 2px solid #216778;
-	border-top		: 0px;
 	background-color	: #FFF;
 	position		: relative;
-	width : 192px;
+	width : 100%;
+	height : 100%;
+	overflow : hidden;
 }
 
 /* User list */
@@ -70,6 +85,11 @@
 	width			: 44mm;
 }
 */
+
+#Main #Left #UserLists {
+	width : 192px;
+}
+
 #Main #Left #Contact label {
 	display			: block;
 	font-weight		: bold;
