Changed: Load CSS with mm to px; Added: Load bar progress;

--- a/css/Load.css
+++ b/css/Load.css
@@ -1,11 +1,11 @@
 #LoadDiv {
-	width			: 80mm;
+	width			: 300px;
 	height			: 265px;
 	border			: 2px solid #FFA200;
 	position		: relative;
-	top				: 80px;
+	top			: 80px;
 	left 			: 50%;
-	margin-left		: -40mm;
+	margin-left		: -150px;
 	background		: url('../images/login/login_box_fundo.gif') repeat-x;
 	padding			: 20px 30px;
 	text-align		: center;
@@ -18,21 +18,21 @@
 	text-indent		: -9999px;
 	overflow		: hidden;
 	background		: url('../images/logo.png') no-repeat;
-	margin			: 3mm 0mm 9mm 25mm;
+	margin			: 10px 0mm 35px 90px;
 }
 
 #LoadDiv h3 {
 	font-weight		: bold;
 	font-size		: 14px;
 	color			: #216778;
-	margin-bottom	: 10mm;
+	margin-bottom		: 30px;
 }
 
 #LoadDiv p {
 	font-style		: italic;
 	font-size		: 12px;
 	color			: #216778;
-	margin-bottom	: 5mm;
+	margin-bottom		: 15px;
 }
 
 #LoadDiv ul {
@@ -57,4 +57,22 @@
 	height			: 9px;
 	background		: url('../images/login/bola_verde.png') no-repeat;
 	margin			: 10px;
+}
+
+#LoadDiv #Bar
+{
+	height			: 15px;
+	width			: 0px;
+	/*background-color	: #21f048;*/
+	background		: url('../images/loadbkg.png') repeat-X;
+	position		: relative;
+}
+
+#LoadDiv #BarBorder
+{
+	height			: 15px;
+	width			: 300px;
+	border			: 1px solid #216778;
+	overflow		: hidden;
+	text-align		: left;
 }
