--- a/css/Chat.css
+++ b/css/Chat.css
@@ -12,7 +12,7 @@
 /* chat list */
 #Chat #ChatList {	
 	list-style		: none;
-	height			: 100%;
+	height			: 15px;
 	margin-left		: 205px;
 	/*
 	margin-left		: 55mm;
@@ -35,6 +35,7 @@
 	text-indent		: 12px;
 	position		: relative;
 	padding-top		: 2px;
+	width			: 100%;
 	/*
 	height			: 4mm;
 	text-indent		: 3mm;
