Modified: Color hr tag for IE

--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -139,6 +139,7 @@
 	height			: 1px;
 	margin			: 2px 15px 0px 0px;
 	background-color	: #FFA200;
+	color	: #FFA200;
 	border			: 0px;
 	/*
 	margin			: 0.5mm 4mm 0mm 0mm;
