Modified: Announce game with rate interval
- ../css/Announce.css: css changes
- challenge/announce.js: added minimum and maximum rating parameters and error messages
- interface/announce.js: added random color label and change announce game function to newer version
- lang/pt_BR.xml: added announce error messages
- xmpp_messages/message.js: send announce game messages with minimum and maximum rating

--- a/css/Announce.css
+++ b/css/Announce.css
@@ -68,7 +68,7 @@
 }
 
 #AnnounceDiv img {
-	margin-right	: 40px;
+	margin-right	: 25px;
 	margin-left		: 8px;
 }
 
@@ -90,6 +90,14 @@
 	text-align		: center;
 	padding-top		: 8mm;
 	margin-bottom	: 2mm;
+}
+
+#AnnounceDiv .auto_img {
+	margin-right	: 5px;
+}
+
+#AnnounceDiv .color_label {
+	font-size : 11px;
 }
 
 #AnnounceDiv .color {
