Modified: Change css style of number of occupants in rooms

--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -330,6 +330,8 @@
 	left			: 20px;
 }
 
-#room_loading span {
-	
+#Rooms #RoomList #RoomPrimary #general_occupants,
+#Rooms #RoomList #RoomSecondary #Sec_occupants {
+	font-weight : normal;
+	font-size : 9px;
 }
