Added: Full name hint to Challenge Menu window Modified: Change location of Full Name hint from interface/room.js to interface/interface.js
- ../css/Main.css: Hint's css
- ../css/Rooms.css: Remove Hint's css
- interface/challengemenu.js: Added function calls to display hints for players in challenge menu
- interface/interface.js: Added functions to display hints
- interface/room.js: Removed functions to display hints, using functions at interface/interface.js

--- a/css/Main.css
+++ b/css/Main.css
@@ -30,3 +30,23 @@ p, a, h1, h2, h3, h4, h5, h6, span, strong{
 	height			: 550px;
 	overflow		: hidden;
 }
+
+/**
+* FULL NAME HINT
+*/
+#FullNameDiv {
+	position		: absolute;
+	padding			: 4px;
+	background-color	: #FFF;
+	border			: 1px solid #216778;
+	z-index : 2;
+}
+
+#FullNameDiv p {
+	font-style		: italic;
+	font-size		: 10px;
+	color			: #216778;
+	cursor			: pointer;
+	margin-bottom		: 1px;
+}
+
