Modified: Remove unused elements and change css of some elements

--- a/css/Announce.css
+++ b/css/Announce.css
@@ -1,135 +1,5 @@
 /**
 * Announce Window
-/
-#AnnounceDiv #Layer1Div,
-#AnnounceDiv #Layer2Div,
-#AnnounceDiv #Layer3Div {
-	padding			: 0px 0px 0px 31px;
-}
-
-#AnnounceDiv #Layer1Div:after,
-#AnnounceDiv #Layer2Div:after,
-#AnnounceDiv #Layer3Div:after {
-/*#AnnounceDiv #Layer2Div:after {/
-	content:".";
-	display:block;
-	clear:both;
-	visibility:hidden;
-	height:0;
-	overflow:hidden;
-}
-
-#AnnounceDiv #Layer1Div,
-#AnnounceDiv #Layer2Div,
-#AnnounceDiv #Layer3Div {
-}
-
-#AnnounceDiv #Layer1Div {
-	margin-bottom : 0px;
-}
-
-#AnnounceDiv #Layer1Div #L1RightDiv {
-	float : left;
-}
-
-#AnnounceDiv #L2RightDiv #FromDiv {
-	float : left;
-	width :	140px;
-}
-
-#AnnounceDiv #L3RightDiv #ToDiv,
-#AnnounceDiv #L3RightDiv #FromDiv {
-	padding-top : 5px
-}
-
-#AnnounceDiv #L3RightDiv span.bold {
-	font-weight : bold;
-} 
-
-#AnnounceDiv #L3RightDiv input {
-	margin-left : 5px;
-}
-
-#AnnounceDiv #Layer1Div {
-	margin-left	:	2px;
-}
-
-#AnnounceDiv .cx {
-	font-size	:	10px;
-	margin-right	:	3mm;
-	font-weight : bold;
-}
-
-#AnnounceDiv .leftDiv {
-	float			: left;
-	width			: 140px;
-}
-
-#AnnounceDiv #L3RightDiv .leftDiv {
-	float			: left;
-	width			: 75px;
-}
-
-#AnnounceDiv p {
-	margin-top		: 0mm;
-	font-weight		: bold;
-	font-size		: 10px;
-	color			: #216778;
-}
-
-#AnnounceDiv img {
-	margin-right	: 25px;
-	margin-left		: 8px;
-}
-
-#AnnounceDiv .drop_select {
-	margin-top		: 1mm;
-	margin-right	: 2mm;
-}
-
-#AnnounceDiv .rating_radio {
-	margin-top		: 3mm;
-	margin-right	: 1.5mm;
-}
-
-#AnnounceDiv .italic {
-	font-style		: italic;
-}
-
-#AnnounceDiv #ButtonsDiv {
-	text-align		: center;
-	padding-top		: 8mm;
-	margin-bottom	: 2mm;
-}
-
-#AnnounceDiv .auto_img {
-	margin-right	: 5px;
-}
-
-#AnnounceDiv .color_label {
-	font-size : 11px;
-}
-
-#AnnounceDiv .color {
-	padding-top	:	1mm;
-}
-
-#AnnounceDiv .format {
-	font-size : 9px;
-}
-
-#AnnounceDiv input,
-#AnnounceDiv textarea,
-#AnnounceDiv select {
-	font-size		: 11px;
-	border			: 1px solid #216778;
-	color			: #216778;
-}
-
-#AnnounceDiv span {
-	font-size		: 10px;
-	color			: #216778;
-}
 */
 #AnnounceDiv #Layer1Div,
 #AnnounceDiv #Layer2Div,
@@ -255,4 +125,12 @@
 #AnnounceDiv #L3RightDiv #FromDiv input,
 #AnnounceDiv #L3RightDiv #ToDiv input {
 	margin-left	:	2px;
+}
+
+#AnnounceDiv #FromDiv span.format {
+	padding-left : 16px;
+}
+
+#AnnounceDiv #ToDiv span.format {
+	padding-left : 11px;
 }
