Modified: Added a examine icon at result table in oldgame window Fixed: Break string in table result at IE Browser
- ../css/Oldgame.css : css changes
- interface/oldgame.js : insert examine td elements, close oldgame window and open oldgame functions at examine icon, create objects that has cell's width
- utils/utils.js : modified the way to break string according to object's width

--- a/css/Oldgame.css
+++ b/css/Oldgame.css
@@ -4,17 +4,12 @@
 }
 	
 #OldGamesDiv img {
-	margin-right	: 3mm;
-	margin-left		: 2mm;
+	margin-right	: 11px;
+	margin-left		: 7px;
 }
 
 #OldGamesDiv .button {
 	width : 80px;
-}
-
-#OldGamesDiv .botao {
-	margin-top		: 3mm;
-	margin-right	: 0mm;
 }
 
 #OldGamesDiv .italic {
@@ -23,7 +18,7 @@
 
 #OldGamesDiv .result {
 	text-align	:	left;
-	margin-bottom	:	3mm;
+	margin-bottom	: 15px;
 }
 
 #OldGamesDiv .format {
@@ -32,25 +27,21 @@
 }
 
 #OldGamesDiv #FormDiv {
-	padding-top	:	6mm;
+	padding-top	:22px;
 }
-
+/*
 #OldGamesDiv #SelectDiv {
 	text-align : center;
 	position	: relative;
 	margin-bottom	:	3mm;
 }
-
+*/
 #OldGamesDiv #ButtonsDiv {
 	text-align : center;
 	position :relative;
-	margin-top	:	8mm;
+	margin-top	:30px;
 	display : block;
 	height : 20px;
-}
-
-#OldGamesDiv #ResultDiv {
-	display: block;
 }
 
 #OldGamesDiv #ResultDiv #TableDiv {
@@ -70,34 +61,28 @@
 */
 #OldGamesDiv #ResultDiv #TBodyDiv {
 	width:	465px;
-	border : solid thin;
-	border-color: Teal;
 	overflow-x : hidden;
 	overflow-y : auto;
-	border-top-width: 1px;
-	border-bottom-width: 0mm;
-	border-left-width: 1px;
-	border-right-width: 0px;
+	padding : 1px 1px 0px 1px;
 }
 
 #OldGamesDiv #ResultDiv {
-	padding-left : 6mm;
-	padding-bottom: 4mm;
+	display: block;
+	padding-left : 25px;
+	padding-bottom: 15px;
 }
 
 #OldGamesDiv #ResultDiv #TFootDiv {
 	width:	464px;
-	border : solid thin;
-	border-color: Teal;
+	border : 1px solid #216778;
 	text-align : center;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	border-top-width: 0mm;
+	border-top-width: 0px;
+	padding : 10px 0px 10px 0px;
 }
 
 #OldGamesDiv #ResultDiv #TFootDiv .page {
-	margin-left : 3mm;
-	margin-right : 3mm;
+	margin-left : 11px;
+	margin-right : 11px;
 	font-size: 9px;
 	font-weight: normal;
 }
@@ -105,16 +90,9 @@
 #OldGamesDiv #ResultDiv #TFootDiv .button {
 	font-size: 9px;
 	font-weight: normal;
-	margin: 0mm 0mm 0mm 0mm;
+	margin: 0px;
 	width: 55px;
 	border-color : #DAF3F5;
-}
-
-#OldGamesDiv #ResultDiv #TFootDiv hr {
-	height			: 1px;
-	margin			: 2.5mm 4mm 2mm 3mm;
-	background-color: #FFA200;
-	border			: 0px;
 }
 
 #OldGamesDiv #ResultDiv .button {
@@ -130,23 +108,23 @@
 	background-color: #C0C0C0;
 	font-size: 9px;
 	font-weight: normal;
-	margin: 0mm 0mm 0mm 0mm;
+	margin: 0px;
 	width: 55px;
 }
 
 #OldGamesDiv #ResultDiv #NoResultDiv {
 	text-align : center;
-	height : 30mm;
-	padding-top	:	15mm;
+	height : 114px;
+	padding-top	:	56px;
 }
 
 #OldGamesDiv #Layer1Div {
-	margin-bottom	:	2mm;
-	padding-left : 22mm;
+	margin-bottom	:	7px;
+	padding-left : 83px;
 }
 
 #OldGamesDiv #Layer2Div {
-	padding-left : 22mm;
+	padding-left : 83px;
 }
 
 #OldGamesDiv .pieces_span {
@@ -176,7 +154,7 @@
 	color			: #216778;
 	background-color: #FFF;
 	text-align		: center;
-	width	:	80px;
+	width	:	73px;
 	padding : 1px;
 	height : 30px;
 }
@@ -196,7 +174,7 @@
 
 #OldGamesDiv input {
 	margin-right	:	4px;
-	margin-top		:	3mm;
+	margin-top		:	11px;
 	padding-left	:	2px;
 }
 #OldGamesDiv input,
@@ -204,8 +182,8 @@
 	border-color : #FFA200;
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv tr {
-	cursor: pointer;
+#OldGamesDiv #ResultDiv #TBodyDiv .examine {
+	width : 26px;
 }
 
 #OldGamesDiv #ResultDiv #TBodyDiv .header {
@@ -213,15 +191,22 @@
 	font-size	:	12px;
 	cursor		: default;
 }
+
+#OldGamesDiv #ResultDiv #TBodyDiv .header_examine {
+	background-color: #DAF3F5;
+	cursor		: default;
+	width			: 26px;
+}
+
 #OldGamesDiv #ResultDiv #TBodyDiv .resultheader {
 	background-color: #DAF3F5;
 	font-size	:	13px;
-	width: 130px;
+	width: 129px;
 	cursor		: default;
 }
 
 #OldGamesDiv .resulttd {
-	width: 130px;
+	width: 129px;
 }
 
 #OldGamesDiv #L2RightDiv #FromDiv {
@@ -244,7 +229,7 @@
 
 #OldGamesDiv #CloseDiv {
 	text-align: center;
-	padding-top: 4mm;
+	padding-top: 15px;
 }
 
 #oldgame_loading, #oldgame_not_found{
@@ -252,4 +237,10 @@
 	border-style		: solid;
 	border-width		: 0px thin;
 	border-color		: #216778;
+}
+
+#OldGamesDiv #ResultDiv #TBodyDiv .examine_icon {
+	margin : 0px;
+	padding : 3px;
+	cursor: pointer;
 }
