--- a/css/Login.css
+++ b/css/Login.css
@@ -174,3 +174,11 @@
 #LangDiv li:hover {
 	text-decoration		: underline;
 }
+
+/* LOADING TEXT */
+#ProgressText, #LoadingText
+{
+	margin			: 0px 10px;
+	font-size		: 12px;
+	color			: #216778;
+}
