Modified: Old game window according to new layout

--- a/css/Oldgame.css
+++ b/css/Oldgame.css
@@ -1,167 +1,15 @@
-#OldGamesDiv .left_div {
-	float	:	left;
-	width	:	170px;
-}
-	
+/*
+ * OLDGAME CSS
+ */
+
+/* HTML Elements */
 #OldGamesDiv img {
 	margin-right	: 11px;
 	margin-left		: 7px;
 }
 
-#OldGamesDiv .button {
-	width : 80px;
-}
-
-#OldGamesDiv .italic {
-	font-style		: italic;
-}
-
-#OldGamesDiv .result {
-	text-align	:	left;
-	margin-bottom	: 15px;
-}
-
-#OldGamesDiv .format {
-	font-weight: normal;
-	font-size : 8px;
-}
-
-#OldGamesDiv #FormDiv {
-	padding-top	:22px;
-}
-/*
-#OldGamesDiv #SelectDiv {
-	text-align : center;
-	position	: relative;
-	margin-bottom	:	3mm;
-}
-*/
-#OldGamesDiv #ButtonsDiv {
-	text-align : center;
-	position :relative;
-	margin-top	:30px;
-	display : block;
-	height : 20px;
-}
-
-#OldGamesDiv #ResultDiv #TableDiv {
-	text-align : center;
-	height : 100%;
-}
-/*
-#OldGamesDiv #ResultDiv #THeadDiv {
-	width:	95%;
-	background-color: #EAF5F4;
-	border : solid thin;
-	border-color: Teal;
-	text-align : center;
-	font-size: 13px;
-	font-weight: bold;
-}
-*/
-#OldGamesDiv #ResultDiv #TBodyDiv {
-	width:	465px;
-	overflow-x : hidden;
-	overflow-y : auto;
-	padding : 1px 1px 0px 1px;
-}
-
-#OldGamesDiv #ResultDiv {
-	display: block;
-	padding-left : 25px;
-	padding-bottom: 15px;
-}
-
-#OldGamesDiv #ResultDiv #TFootDiv {
-	width:	464px;
-	border : 1px solid #216778;
-	text-align : center;
-	border-top-width: 0px;
-	padding : 10px 0px 10px 0px;
-}
-
-#OldGamesDiv #ResultDiv #TFootDiv .page {
-	margin-left : 11px;
-	margin-right : 11px;
-	font-size: 9px;
-	font-weight: normal;
-}
-
-#OldGamesDiv #ResultDiv #TFootDiv .button {
-	font-size: 9px;
-	font-weight: normal;
-	margin: 0px;
-	width: 55px;
-	border-color : #DAF3F5;
-}
-
-#OldGamesDiv #ResultDiv .button {
-	bottom: 0px;
-}
-
-#OldGamesDiv #ResultDiv p {
-	font-weight:	normal;
-}
-
-#OldGamesDiv #ResultDiv #TFootDiv .button_disabled {
-	border-color : #C0C0C0;
-	background-color: #C0C0C0;
-	font-size: 9px;
-	font-weight: normal;
-	margin: 0px;
-	width: 55px;
-}
-
-#OldGamesDiv #ResultDiv #NoResultDiv {
-	text-align : center;
-	height : 114px;
-	padding-top	:	56px;
-}
-
-#OldGamesDiv #Layer1Div {
-	margin-bottom	:	7px;
-	padding-left : 83px;
-}
-
-#OldGamesDiv #Layer2Div {
-	padding-left : 83px;
-}
-
-#OldGamesDiv .pieces_span {
-	font-size	:	14px;
-	font-weight	:	normal;
-}
-
-#OldGamesDiv thead {
-	background-color: #DAF3F5;
-	font-weight		: bold;
-	font-size	:	12px;
-	border			: 1px solid #216778;
-}
-
-#OldGamesDiv tbody,
-#OldGamesDiv table {
-	display			: block;
-	width			: 100%; 
-	position		: relative;
-	border-collapse	: collapse;
-	empty-cells		: show;
-}
-
-#OldGamesDiv td {
-	border			: 1px solid #216778;
-	font-size		: 10px;
-	color			: #216778;
-	background-color: #FFF;
-	text-align		: center;
-	width	:	73px;
-	padding : 1px;
-	height : 30px;
-}
-
 #OldGamesDiv p {
 	font-weight		: bold;
-/*	font-size		: 12px;*/
 	color			: #216778;
 }
 
@@ -177,36 +25,135 @@
 	margin-top		:	11px;
 	padding-left	:	2px;
 }
+
 #OldGamesDiv input,
 #OldGamesDiv select {
 	border-color : #FFA200;
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv .examine {
-	width : 26px;
+#OldGamesDiv input.button {
+	width : 80px;
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv .header {
+#OldGamesDiv #ResultDiv p {
+	font-weight:	normal;
+} 
+
+#OldGamesDiv #ResultDiv table {
+	border: 1px solid #216678;
+	width : 480px;
+	text-align : center;
+}
+
+#OldGamesDiv thead td {
 	background-color: #DAF3F5;
 	font-size	:	12px;
-	cursor		: default;
+	border-bottom	: 1px solid #216778; 
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv .header_examine {
-	background-color: #DAF3F5;
-	cursor		: default;
-	width			: 26px;
+#OldGamesDiv tbody,
+#OldGamesDiv table {
+	border-collapse	: collapse;
+	empty-cells		: show;
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv .resultheader {
-	background-color: #DAF3F5;
-	font-size	:	13px;
-	width: 129px;
-	cursor		: default;
+#OldGamesDiv #ResultDiv hr {
+	color : #FFA200;
+	background-color : #FFA200;
+	margin : 0px 10px 10px;
+	height : 1px;
+	border : 0px;
 }
 
-#OldGamesDiv .resulttd {
-	width: 129px;
+#OldGamesDiv td {
+	font-size		: 10px;
+	color			: #216778;
+	background-color: #FFF;
+	height : 30px;
+	width : 76px;
+	font-weight		: bold;
+}
+
+/* Class */
+#OldGamesDiv .left_div {
+	float	:	left;
+	width	:	170px;
+}
+
+#OldGamesDiv .italic {
+	font-style		: italic;
+}
+
+#OldGamesDiv .format {
+	font-weight: normal;
+	font-size : 8px;
+}
+
+#OldGamesDiv #ResultDiv .result {
+	text-align	:	left;
+	margin-bottom	: 15px;
+	padding-left : 25px;
+}
+
+#OldGamesDiv #ResultDiv #TBodyDiv .resulttd, 
+#OldGamesDiv #ResultDiv #TBodyDiv .result_header {
+	width: 134px;
+}
+
+#OldGamesDiv #ResultDiv #TBodyDiv .header_examine,
+#OldGamesDiv #ResultDiv #TBodyDiv .examine {
+	width : 40px;
+}
+
+#OldGamesDiv #ResultDiv #TBodyDiv .examine_icon {
+	margin : 0px;
+	padding : 3px;
+	cursor: pointer;
+}
+
+#OldGamesDiv #ResultDiv .tfoot_td {
+	padding-bottom : 10px;
+}
+
+#OldGamesDiv #ResultDiv .page {
+	margin-left : 11px;
+	margin-right : 11px;
+	font-size: 9px;
+	font-weight: normal;
+}
+
+#OldGamesDiv #ResultDiv .button {
+	bottom: 0px;
+	font-size: 9px;
+	font-weight: normal;
+	margin: 0px;
+	width: 55px;
+	border-color : #DAF3F5;
+}
+
+#OldGamesDiv #ResultDiv .button_disabled {
+	border-color : #C0C0C0;
+	background-color: #C0C0C0;
+	font-size: 9px;
+	font-weight: normal;
+	margin: 0px;
+	width: 55px;
+}
+
+/* ID */
+#OldGamesDiv #FormDiv {
+	padding-top	: 22px;
+	height : 120px;
+	display : block;
+}
+
+#OldGamesDiv #Layer1Div {
+	margin-bottom	:	7px;
+	padding-left : 83px;
+}
+
+#OldGamesDiv #Layer2Div {
+	padding-left : 83px;
 }
 
 #OldGamesDiv #L2RightDiv #FromDiv {
@@ -218,18 +165,32 @@
 	float: left;
 }
 
-#OldGamesDiv #L2RightDiv:after {
-	content:".";
-	display:block;
-	clear:both;
-	visibility:hidden;
-	height:0;
-	overflow:hidden;
+#OldGamesDiv #ButtonsDiv {
+	text-align : center;
+	position :relative;
+	display : block;
+	height : 20px;
 }
 
-#OldGamesDiv #CloseDiv {
-	text-align: center;
-	padding-top: 15px;
+#OldGamesDiv #ResultDiv {
+	display: block;
+	padding-bottom: 15px;
+}
+
+#OldGamesDiv #ResultDiv #NoResultDiv {
+	text-align : center;
+	height : 114px;
+	padding-top	:	56px;
+}
+
+#OldGamesDiv #ResultDiv #TableDiv {
+	text-align : center;
+	padding-left : 22px;
+}
+
+#OldGamesDiv #ResultDiv #TFootDiv {
+	height : 40px;
+	display : block;
 }
 
 #oldgame_loading, #oldgame_not_found{
@@ -239,8 +200,7 @@
 	border-color		: #216778;
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv .examine_icon {
-	margin : 0px;
-	padding : 3px;
-	cursor: pointer;
+#OldGamesDiv #CloseDiv {
+	text-align: center;
+	padding-top: 15px;
 }
