Fixed: Game move list CSS;

--- a/css/Board.css
+++ b/css/Board.css
@@ -357,7 +357,7 @@
 }
 
 #MoveList li{
-	width			: 151px;
+	/*width			: 151px;*/
 	padding			: 0px 12px;
 	height			: 15px;
 }
@@ -372,7 +372,7 @@
 }
 
 #MoveList p.move{
-	width			: 60px
+	width			: 52px
 }
 
 #MoveListDiv #MoveListButtons{
