--- a/css/Oldgame.css
+++ b/css/Oldgame.css
@@ -35,6 +35,11 @@
 	width : 80px;
 }
 
+#OldGamesDiv #L2RightDiv #FromDiv span,
+#OldGamesDiv #L2RightDiv #ToDiv span {
+	font-size : 11px;
+}
+
 #OldGamesDiv #ResultDiv p {
 	font-weight:	normal;
 } 
@@ -55,6 +60,7 @@
 #OldGamesDiv table {
 	border-collapse	: collapse;
 	empty-cells		: show;
+	font-weight : bold;
 }
 
 #OldGamesDiv #ResultDiv hr {
@@ -84,9 +90,10 @@
 	font-style		: italic;
 }
 
-#OldGamesDiv .format {
-	font-weight: normal;
+#OldGamesDiv #L2RightDiv #FromDiv .format,
+#OldGamesDiv #L2RightDiv #ToDiv .format {
 	font-size : 8px;
+	font-weight: normal;
 }
 
 #OldGamesDiv #ResultDiv .result {
