--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -177,8 +177,9 @@
 	color			: #216778;
 }
 
-#Main #Left #Rooms .Room .MessageList li strong{
-	font-size		: 10px;
+#Main #Left #Rooms .Room .MessageList strong {
+	font-size		: 11px;
+	font-weight : bold;
 }
 
 /* input box */
