--- a/css/Welcome.css
+++ b/css/Welcome.css
@@ -19,9 +19,10 @@
 #Welcome h1{
 	text-align	: center;
 	margin		: 10px;
+	font-weight : bold;
 }
 
-#Welcome p{
+#Welcome p {
 	margin		: 10px;
 	text-align	: justify;
 }
@@ -29,6 +30,10 @@
 #Welcome p.center{
 	text-align	: center;
 	margin-bottom	: 20px;
+}
+
+#Welcome b {
+	font-weight : bold;
 }
 
 #WelcomeCenter{
